--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 asgiref==3.8.1
+attrs==23.2.0
+branca==0.7.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+crispy-bootstrap5==2024.2
 Django==5.0.6
+django-crispy-forms==2.1
+folium==0.16.0
+frozenlist==1.4.1
+geographiclib==2.0
+geoip2==4.8.0
+geopy==2.4.1
+idna==3.7
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+maxminddb==2.6.1
+multidict==6.0.5
+numpy==1.26.4
 python-dotenv==1.0.1
+requests==2.32.3
+setuptools==70.0.0
 sqlparse==0.5.0
 tzdata==2024.1
+urllib3==2.2.1
+xyzservices==2024.4.0
+yarl==1.9.4
